dataset1235/2025-2/1955397009/users/2021828639/executions/3239899347_4228375981.log
== RUN (2025-08-28 12:28:18)
-- CODE: 
libras = int(input())
reais = libras*6,13
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:30:30)
-- CODE: 
libras = float(input())
reais = libras*6,13
print(reais)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
---- user output:
(114.0, 13)
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
---- user output:
(48.0, 13)
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
---- user output:
(6.0, 13)
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
---- user output:
(12.0, 13)
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
---- user output:
(126.0, 13)
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
---- user output:
(42.0, 13)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:30:58)
-- CODE: 
libras = float(input())
reais = libras*6.13
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
---- user output:
116.47
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
---- user output:
49.04
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
---- user output:
6.13
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
---- user output:
12.26
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
---- user output:
128.73
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
---- user output:
42.91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:31:02)
-- CODE: 
libras = float(input())
reais = libras*6.13
print(round(reais,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
---- user output:
116.47
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
---- user output:
49.04
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
---- user output:
6.13
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
---- user output:
12.26
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
---- user output:
128.73
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
---- user output:
42.91
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:30:51)
-- CODE: 
libras = float(input())
reais = libras*6.13
print(round(reais,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
-- ERROR:
File "XXXX", line 3
    print(round(reais,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
-- ERROR:
File "XXXX", line 3
    print(round(reais,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
-- ERROR:
File "XXXX", line 3
    print(round(reais,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
-- ERROR:
File "XXXX", line 3
    print(round(reais,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
-- ERROR:
File "XXXX", line 3
    print(round(reais,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
-- ERROR:
File "XXXX", line 3
    print(round(reais,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:29:22)
-- CODE: 
libras = float(input())
reais = libras*6,13
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(reais,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
